--- a/NorthwindTradersSpringboot/src/main/resources/application.properties
+++ b/NorthwindTradersSpringboot/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=NorthwindTradersSpringboot 
+datasource.username=root
+datasource.password=yearup
+datasource.connectionurl=jdbc:mysql://localhost:3306/northwind
