spring boot northwind

--- a/NorthwindTradersSpringboot/src/main/resources/application.properties
+++ b/NorthwindTradersSpringboot/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.application.name=NorthwindTradersSpringboot
 northwind.connectionUrl=jdbc:mysql://localhost:3306/northwind
 northwind.username=root
 northwind.password=yearup
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
